CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

18 October 2007
+ Added loadClass information to Database.txt
+ Updated Image_Manager documentation.

16 October 2007
+ Added Eloi George's patch #1814159 to DBPager.php.
+ Added area tag to breaker function in Text class.

12 October 2007
+ Form.php - added function addRadioAssoc, allows you to send an
  associative array to create a set of radio buttons. The array keys
  are the input values and the array values are the labels. 
+ Updated ControlPanel.txt with information on adding link_titles and
  using Panel's new display parameters.

11 October 2007
+ Small change in Database to allow numerical prefixes.
+ Added order and limit to update and delete function.

10 October 2007
+ PageSmith and Web Page conversions remove the old menu suffixes.
+ Added note to freecap CAPTCHA
+ Added random number to open_window window title to allow multiple
  popups.


Version 1.6.3
-------------------------------------------------------------------
4 October 2007
+ Updated Pear DB class.
+ Added modifier to query function that disables table prefixing.
+ Fixed renameTableColumn double prefixing bug.

3 October 2007
+ Renamed registered column in registered table to
  registered_to. Columns with the same name as the table don't work
  with table prefixing. Changed in update.php.
+ Added logDB to the 'assoc' select option.
+ Changed the prefix search to try and prevent incorrect prefixing on
  column names.
+ Added short document on database rules.

2 October 2007
+ More changes to File.php. Separated the resizeImage function from
  the cropping. Now have three functions: scaleImage, cropPercent, and
  cropImage. 

1 October 2007
+ Added getGraph function to Batch
+ Updated: templates/graph.tpl, img/ajax-loader.gif

29 September 2007
+ Bug fix on _indexBy function. stacked variable wasn't getting set.

28 September 2007
+ Added createPrimaryKey function.