@@ -2,6 +2,14 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+25 October 2007
++ Added default 'No label' to open_window if one is not entered.
++ Added nextPage function to Batch. Automatically adds the meta tag
+  forward.
++ Added graph padding to total width of graph.
++ Added open_window type information in example.
++ Needed in update: Core needs to copy batch graph template and graphic
+
 18 October 2007
 + Added loadClass information to Database.txt
 + Updated Image_Manager documentation.
